---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2024-10-31
  Changes:
    - Make hand-crafting instant, but not free.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2024-10-28
  Changes:
    - Remove character hit-box (no clip).
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2024-10-28
  Changes:
    - Un-cap player reach, kind of (sets it to the unsigned 32-bit integer maximum).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2024-10-28
  Changes:
    - Tint entity ghosts a vibrant teal.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-10-28
  Changes:
    - Initial release. This will be released initially as an empty mod, future updates will work towards the goal of fulfilling the mod description: "This aims to simplify the gameplay experience while maintaining the challenge and satisfaction of building complex factories."